data/derived/comb/progs/unify/prog3559.ml.out
Characters 47-60:
  else digitsOfInt n/10 :: [n mod 10];;
       ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
